# geotexxx_package

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
geotexxx/: meta.yaml
src/geotexxx/: gefxml_reader.py  parameter_afleiding.py
