# inspired by https://github.com/fatiando/verde/blob/main/pyproject.toml
[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "node-and-date"
write_to =  "src/geotexxx/_version_generated.py"

[project]
name = "geotexxx"
description = "Package om geotechnisch grondonderzoek te verwerken"
authors = [
    { name="Thomas van der Linden", email="t.van.der.linden@amsterdam.nl" },
]
readme = "README.md"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]