# inspired by https://github.com/fatiando/verde/blob/main/pyproject.toml
[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme =  "post-release"
local_scheme =  "node-and-date"
write_to =  "src/geotexxx/_version_generated.py"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["geotexxx*"]  # ["*"] by default
exclude = ["geotexxx.tests*"]  # empty by default
namespaces = false  # true by default